[package]
name = "dont-get-rusty"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A structured Rust learning project"

[dependencies]
tokio = { version = "1.36", features = ["full"] }  # For async/await examples
rayon = "1.8"                                      # For parallel processing examples
serde = { version = "1.0", features = ["derive"] } # For serialization examples
serde_json = "1.0"                                 # For JSON handling
thiserror = "2.0.17"                               # For error handling examples
anyhow = "1.0"                                     # For error handling examples 
zscript = "0.100.0"
